@@ -755,6 +755,9 @@ EXTRA_DIST = \
 	readdir0.awk \
 	readfile2.awk \
 	readfile2.ok \
+	rebrackloc.awk \
+	rebrackloc.in \
+	rebrackloc.ok \
 	rebt8b1.awk \
 	rebt8b1.ok \
 	rebt8b2.awk \
@@ -1032,7 +1035,8 @@ BASIC_TESTS = \
 	paramdup paramres paramtyp paramuninitglobal parse1 parsefld parseme \
 	pcntplus posix2008sub prdupval prec printf0 printf1 prmarscl prmreuse \
 	prt1eval prtoeval \
-	rand range1 rebt8b1 redfilnm regeq regexpbrack regexpbrack2 regexprange regrange reindops \
+	rand range1 rebrackloc rebt8b1 redfilnm regeq regexpbrack regexpbrack2 \
+	regexprange regrange reindops \
 	reparse resplit rri1 rs rsnul1nl rsnulbig rsnulbig2 rstest1 rstest2 \
 	rstest3 rstest4 rstest5 rswhite \
 	scalar sclforin sclifin sortempty sortglos splitargv splitarr splitdef \
