@@ -1,3 +1,8 @@
+2015-05-05         Andrew J. Schorr     <aschorr@telemetry-investments.com>
+
+	* Makefile.am (rebrackloc): New test.
+	* rebrackloc.awk, rebrackloc.in, rebrackloc.ok: New files.
+
 2015-04-29         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.1.2: Release tar ball made.
