@@ -1,3 +1,9 @@
+2015-05-05         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y (yylex): Yet Another Fix for parsing bracket
+	expressions. Thanks yet again to Andrew Schorr. Maybe it's
+	even finally nailed down now.
+
 2015-05-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awkgram.y: Make sure values are not null in param list.
